@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.becpg</groupId>
 	<artifactId>becpg-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>beCPG</name>
-	<version>1.6.4</version>
+	<version>2.0.0</version>
+	<parent>
+		<groupId>org.alfresco.maven</groupId>
+		<artifactId>alfresco-sdk-parent</artifactId>
+		<version>2.0.0-beta-3</version>
+	</parent>
+	<prerequisites>
+		<maven>3.2.2</maven>
+	</prerequisites>
 	<description>BeCPG Parent Project</description>
 	<organization>
 		<name>BeCPG</name>
@@ -67,36 +76,17 @@
 	</developers>
 
 	<properties>
-		<!-- Test -->
+		<alfresco.version>5.0.b</alfresco.version>
 		<alfresco.data.location>${project.build.directory}/alf_data/</alfresco.data.location>
-		<app.log.dir>${project.build.directory}/</app.log.dir>
-		<app.log.root.level>WARN</app.log.root.level>
-
-		<!-- By default the H2 embedded database datafile is created under the alfresco.data.location folder -->
-		<alfresco.db.params>MODE=PostgreSQL;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=100000;MVCC=TRUE</alfresco.db.params>
-		<alfresco.db.url>jdbc:h2:${alfresco.data.location}/h2_data/${alfresco.db.name};${alfresco.db.params}</alfresco.db.url> 
-		 <alfresco.db.datasource.class>org.h2.jdbcx.JdbcDataSource</alfresco.db.datasource.class> 
 		<alfresco.db.name>becpg_test_contribs</alfresco.db.name>
-		<!-- <alfresco.db.url>jdbc:mysql://localhost/${alfresco.db.name}</alfresco.db.url> 
-		<alfresco.db.datasource.class>org.gjt.mm.mysql.Driver</alfresco.db.datasource.class> 
-		<alfresco.db.host>localhost</alfresco.db.host>  
-		<alfresco.db.username>becpg</alfresco.db.username>
-		<alfresco.db.password>becpg</alfresco.db.password> -->
-
-		<!-- AMP config dir -->
-		<alfresco.amp.config.dir>alfresco/module/${project.artifactId}</alfresco.amp.config.dir>
-		<!-- build -->
-		<alfresco.groupId>org.alfresco</alfresco.groupId>
-		<alfresco.version>4.2.f</alfresco.version>
-		<birt.version>4.4.0</birt.version>
-
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<app.testing.jvm.args>-Xms256m -Xmx1524m -Duser.language=fr</app.testing.jvm.args>
 		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
-
-		<app.testing.jvm.args>-Xms256m -Xmx1524m -XX:MaxPermSize=256m
-			-Duser.language=fr</app.testing.jvm.args>
-
+		<birt.version>4.4.0</birt.version>
 		<sonar.language>java</sonar.language>
+
+		<alfresco.client.war>alfresco</alfresco.client.war>
+		<alfresco.client.war.groupId>org.alfresco</alfresco.client.war.groupId>
+
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -109,7 +99,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<repositories>
 		<repository>
 			<id>alfresco-public</id>
@@ -138,259 +127,69 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.16</version>
-				<configuration>
-					<argLine>${app.testing.jvm.args}</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				 <groupId>org.apache.maven.plugins</groupId>
-				 <artifactId>maven-resources-plugin</artifactId>
-				 <version>2.6</version>
-			</plugin>
-			<plugin>
 				<groupId>org.alfresco.maven.plugin</groupId>
-				<artifactId>maven-amp-plugin</artifactId>
-				<version>3.0.4</version>
+				<artifactId>alfresco-maven-plugin</artifactId>
+				<version>${maven.alfresco.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<archive>
-						<addMavenDescriptor>false</addMavenDescriptor>
-					</archive>
-					<overlays>
-						<!-- This sample adds records management module in the finally built AMP <overlay> <groupId>org.org.alfresco</groupId> <artifactId>recordsmanagement</artifactId> <version>2.1.0</version> <type>amp</type> 
-							</overlay> -->
-						<!-- The current AMP is always last in order to overwrite other modules' modules.properties <overlay></overlay> -->
-					</overlays>
+					<snapshotToTimestamp>true</snapshotToTimestamp>
 				</configuration>
 			</plugin>
 			<plugin>
-		         <groupId>org.codehaus.mojo</groupId>
-		         <artifactId>buildnumber-maven-plugin</artifactId>
-		         <version>1.2</version>
-		         <executions>
-		           <execution>
-		              <phase>validate</phase>
-		              <goals>
-		                <goal>create</goal>
-		              </goals>
-		           </execution>
-		         </executions>
-		         <configuration>
-		            <docheck>false</docheck>
-		            <doupdate>false</doupdate>
-		            <shortrevisionlength>5</shortrevisionlength>
-		         </configuration>
-		      </plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<docheck>false</docheck>
+					<doupdate>false</doupdate>
+					<shortrevisionlength>5</shortrevisionlength>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
+						<nonFilteredFileExtension>acp</nonFilteredFileExtension>
+						<nonFilteredFileExtension>jpg</nonFilteredFileExtension>
+						<nonFilteredFileExtension>png</nonFilteredFileExtension>
+						<nonFilteredFileExtension>gif</nonFilteredFileExtension>
+						<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
+						<nonFilteredFileExtension>doc</nonFilteredFileExtension>
+						<nonFilteredFileExtension>docx</nonFilteredFileExtension>
+						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
+						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
+						<nonFilteredFileExtension>ppt</nonFilteredFileExtension>
+						<nonFilteredFileExtension>pptx</nonFilteredFileExtension>
+						<nonFilteredFileExtension>bin</nonFilteredFileExtension>
+						<nonFilteredFileExtension>lic</nonFilteredFileExtension>
+						<nonFilteredFileExtension>swf</nonFilteredFileExtension>
+						<nonFilteredFileExtension>zip</nonFilteredFileExtension>
+						<nonFilteredFileExtension>msg</nonFilteredFileExtension>
+						<nonFilteredFileExtension>csv</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>2.1</version>
-				</plugin>
-		   </plugins>
-		</pluginManagement>
-		<resources>
-			<resource>
-				<filtering>true</filtering>
-				<directory>src/main/resources</directory>
-				<excludes>
-					<exclude>**README-*</exclude>
-					<exclude>**/*.csv</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/resources</directory>
-				<includes>
-					<include>**/*.csv</include>
-				</includes>
-			</resource>
-			<!-- Copies and filters AMP config in the proper package 'alfresco/module/becpg.becpg-core' so to enforce full module naming single sourcing from POM properties -->
-			<resource>
-				<filtering>true</filtering>
-				<directory>src/main/config</directory>
-				<targetPath>${alfresco.amp.config.dir}</targetPath>
-				<excludes>
-					<exclude>**README-*</exclude>
-				</excludes>
-			</resource>
-			<!-- Copies web files -->
-			<resource>
-				<filtering>false</filtering>
-				<directory>src/main/web</directory>
-				<targetPath>alfresco/module/${project.artifactId}/web</targetPath>
-				<excludes>
-					<exclude>**README-*</exclude>
-				</excludes>
-			</resource>
-			<!-- The file-mapping.properties is simply ignored by the plugin when assembling the AMP file -->
-			<resource>
-				<filtering>true</filtering>
-				<directory>${basedir}</directory>
-				<includes>
-					<include>file-mapping.properties</include>
-				</includes>
-				<targetPath>../${project.artifactId}-${project.version}/</targetPath>
-				<!-- hack TODO bug here make amp include all target -->
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<filtering>true</filtering>
-				<directory>src/test/resources</directory>
-			</testResource>
-		</testResources>
-
+		<!-- <pluginManagement> <plugins> <plugin> <groupId>org.codehaus.mojo</groupId> 
+			<artifactId>sonar-maven-plugin</artifactId> <version>2.1</version> </plugin> 
+			</plugins> </pluginManagement> -->
 	</build>
-	<dependencies>
 
-		<!-- Test -->
-	
-		<dependency>
-			<groupId>${alfresco.groupId}</groupId>
-			<artifactId>alfresco-repository</artifactId>
-			<version>${alfresco.version}</version>
-			<classifier>config</classifier>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>${alfresco.groupId}</groupId>
-			<artifactId>alfresco-data-model</artifactId>
-			<version>${alfresco.version}</version>
-			<classifier>config</classifier>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.alfresco</groupId>
-			<artifactId>alfresco-remote-api</artifactId>
-			<version>${alfresco.version}</version>
-			<scope>test</scope>
-			<classifier>config</classifier>
-			<exclusions>
-				<exclusion>
-					<artifactId>mail</artifactId>
-					<groupId>javax.mail</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.alfresco</groupId>
-			<artifactId>alfresco-remote-api</artifactId>
-			<version>${alfresco.version}</version>
-			<scope>test</scope>
-			<classifier>tests</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.chemistry</groupId>
-			<artifactId>chemistry-tck-atompub</artifactId>
-			<version>0.1-incubating-unreleased</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.extensions.surf</groupId>
-			<artifactId>spring-webscripts</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
-			<classifier>tests</classifier>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>spring-surf-core-configservice</artifactId>
-					<groupId>org.springframework.extensions.surf</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.175</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.29</version>
-			<scope>test</scope>
-		</dependency>
-		
-	 	<dependency>
-			<groupId>tk.skuro.alfresco</groupId>
-			<artifactId>h2-support</artifactId>
-			<version>1.5</version>
-			<scope>test</scope>
-		</dependency> 
-
-		<dependency>
-			<groupId>org.alfresco.maven</groupId>
-			<artifactId>alfresco-rad</artifactId>
-			<version>1.1.0</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Requires this explicit test dependency, for a Spring 3.0.5 bug | See https://jira.springsource.org/browse/SPR-8527 -->
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>3.0.6.RELEASE</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jms</artifactId>
-					<groupId>javax.jms</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jmxtools</artifactId>
-					<groupId>com.sun.jdmk</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jmxri</artifactId>
-					<groupId>com.sun.jmx</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>mail</artifactId>
-					<groupId>javax.mail</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		
-	</dependencies>
-	
 	<modules>
 		<module>becpg-tools</module>
 		<module>becpg-report</module>
@@ -419,32 +218,6 @@
 				<!-- Test -->
 				<alfresco.data.location>/dev/shm/alfresco</alfresco.data.location>
 			</properties>
-		</profile>
-		<profile>
-			<id>purge</id>
-			<build>
-				<plugins>
-					<!-- Cleaning Alfresco Repository storage/log folders/files -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-clean-plugin</artifactId>
-						<version>2.5</version>
-						<configuration>
-							<filesets>
-								<fileset>
-									<directory>${alfresco.data.location}</directory>
-								</fileset>
-								<fileset>
-									<directory>${app.log.dir}</directory>
-									<includes>
-										<include>*.log</include>
-									</includes>
-								</fileset>
-							</filesets>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
 		</profile>
 	</profiles>
 </project>
